# L-SMASH-Works

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FindFFMPEG.cmake  README.md  build.cmd  meson.build  pyproject.toml  version.rc.in
.github/workflows/: CI.yml  build.yml  manual.yml  pack.yml
AviSynth/: LSMASHSourceVCX.sln  LSMASHSourceVCX.vcxproj  LSMASHSourceVCX.vcxproj.filters  README  README.md  audio_output.cpp  audio_output.h  exlibs.cpp  libavsmash_source.cpp  libavsmash_source.h  lsmashsource.cpp  lsmashsource.h  lwlibav_source.cpp  lwlibav_source.h  meson.build  vcxcompat.props  video_output.cpp  video_output.h
AviUtl/: README  README.ja  audio_output.c  audio_output.h  avs_input.c  color.h  colorspace.c  colorspace.h  colorspace_simd.c  colorspace_simd.h  configure  dummy_input.c  filter.h  input.h  libavsmash_input.c  lwcolor.c  lwcolor.h  lwcolor_simd.c  lwcolor_simd.h  lwdumper.c  lwinput.c  lwinput.h  lwinput.rc  lwlibav_input.c  lwmuxer.c  progress_dlg.c  progress_dlg.h  resource.h  video_output.c  video_output.h  vpy_input.c
AviUtl2/include/au2/: AudioOutputAdapter.hpp  InputPlugin.hpp  InputSession.hpp  Path.hpp  ReaderBackend.hpp  ReaderOptions.hpp  VideoOutputAdapter.hpp  input2.h
AviUtl2/src/: AudioOutputAdapter.cpp  InputPlugin.cpp  InputSession.cpp  LibavsmashBackend.cpp  LwlibavBackend.cpp  Path.cpp  PluginExports.cpp  VideoOutputAdapter.cpp
VapourSynth/: README  README.md  build_plugin.sh  configure  libavsmash_source.c  lsmashsource.c  lsmashsource.h  lwlibav_source.c  meson.build  meson_options.txt  version.h  version.h.in  video_output.c  video_output.h
cli/: CMakeLists.txt  index.c  meson.build  version.rc.in
cmake/: FindLSMASH.cmake.bak  FindMFX.cmake  FindOBUParse.cmake.bak  FindVPX.cmake  Finddav1d.cmake
common/: audio_output.c  audio_output.h  cpp_compat.h  decode.c  decode.h  libavsmash.c  libavsmash.h  libavsmash_audio.c  libavsmash_audio.h  libavsmash_audio_internal.h  libavsmash_video.c  libavsmash_video.h  libavsmash_video_internal.h  lwindex.c  lwindex.h  lwindex_parser.c  lwindex_parser.h  lwindex_sscanf_unrolled.h  lwindex_utils.c  lwindex_utils.h  lwlibav_audio.c  lwlibav_audio.h  lwlibav_audio_internal.h  lwlibav_dec.c  lwlibav_dec.h  lwlibav_video.c  lwlibav_video.h  lwlibav_video_internal.h  lwsimd.c  lwsimd.h  osdep.c  osdep.h  planar_yuv_sse2.c  progress.h  qsv.c  qsv.h  resample.c  resample.h  sse2neon.h  utils.c  (+3 more)
include/: avisynth.h  avisynth_c.h  input.h
include/avs/: capi.h  types.h
tests/: test_invariant_video_output.c
